Edited wiki page through web user interface.

--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -1,5 +1,5 @@
 #summary Latest news about this project.
 #labels Featured
 
-==February 27th, 2007 - Project creation==
-A newsletter Wordpress plugin was created. Soon a public release will be available for download.
+==February 27th, 2007 - Version 1.0 RC1 released==
+The first version of the wp-ajax-newsletter pluging for Wordpress was made public. Feel free to download it, test it, and improve it :).
