--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -2,8 +2,56 @@
 #labels Featured,Phase-Deploy
 ==Installation==
 
-To be updated.
+After downloading this plugin, extract the directory "wp-ajax-newsletter".
 
+Go to the wordpress back-office and activate the plugin. This will create the needed tables in the database.
+
+To add the subscription form in your template, insert the following code where you want the form to appear:
+
+{{{
+<?php if (class_exists('ajaxNewsletter')): ?>
+<!-- place your HTML code here -->
+<?php ajaxNewsletter::newsletterForm(); ?>
+<!-- place your HTML code here -->
+<?php endif; ?>
+}}}
+
+You can use the following CSS classes to style the form in the front-office:
+{{{
+#ajaxNewsletter, .newsletterContainer {
+	/* newsletter container */
+}
+
+#newsletterFormDiv {
+	/* newsletter form elements*/
+}
+
+.newsletterTextInput {
+	/* email text input */
+}
+
+#newsletterLoading {
+	/* the loading message while the subscription is beeing handled */
+}
+
+.success {
+	/* the success message container */
+}
+
+.error {
+	/* the error message container */
+}
+}}}
 ==Configuration==
 
-To be updated.
+To configure this plugin access "Newsletter" under the "Options" tab.
+
+The following tags can be used in the template for the newsletter:
+{TITLE} - The post title
+{URL} - The post URL
+{DATE} - The date when the post was published (uses wordpress defined format)
+{TIME} - The time when the post was published (uses wordpress defined format)
+{AUTHOR} - The post author
+{EXCERPT} - The post excerpt. If none is available, it will be generated based on the content.
+{CONTENT} - The post content.
+
