--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -2,4 +2,6 @@
 #labels Featured
 
 ==March 20th, 2007 - Version 1.0 RC1 released==
-The first version of the wp-ajax-newsletter pluging for Wordpress was made public. Feel free to download it, test it, and improve it :).
+The first version of the *wp-ajax-newsletter* plugin for Wordpress was made public. Feel free to download it, test it, and improve it :).
+
+*The download has been deprecated*. Some issues have arose. We are currently working to release a new version today. Sorry for the inconvenience.
