--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -1,7 +1,10 @@
 #summary Latest news about this project.
 #labels Featured
 
+==March 20th, 2007 - Version 1.0 RC2 released==
+The second release candidate is now available in the download section. It fixes a reported issue and improvements were added. For more information please read the ChangeLog.
+
 ==March 20th, 2007 - Version 1.0 RC1 released==
 The first version of the *wp-ajax-newsletter* plugin for Wordpress was made public. Feel free to download it, test it, and improve it :).
 
-*The download has been deprecated*. Some issues have arose. We are currently working to release a new version today. Sorry for the inconvenience.
+This download has been deprecated. Some issues have arose. We are currently working to release a new version today. Sorry for the inconvenience.
