--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -16,6 +16,19 @@ To add the subscription form in your template, insert the following code where y
 <?php endif; ?>
 }}}
 
+*Note:*
+The `<!-- place your HTML code here -->` instruction is optional. You can use it to add a title or a container. An example for the default Wordpress template is:
+{{{
+<?php if (class_exists('ajaxNewsletter')): ?>
+<li><h2>Newsletter</h2>
+   <div style="padding:5px 3px;">
+      <?php ajaxNewsletter::newsletterForm(); ?>
+   </div>
+</li>
+<?php endif; ?>
+}}}
+
+
 You can use the following CSS classes to style the form in the front-office:
 {{{
 #ajaxNewsletter, .newsletterContainer {
@@ -42,6 +55,28 @@ You can use the following CSS classes to style the form in the front-office:
 	/* the error message container */
 }
 }}}
+
+*For example* to get a similar result as show in the demonstration video, add the following code to your template CSS file:
+{{{
+.newsletterTextInput{ width:120px; }
+
+.newsletterContainer{ width:100%; }
+
+.success {
+	background: #CFEBF7;
+	border: 1px solid #2580B2;
+}
+
+.error {
+	background: #FFEFF7;
+	border: 1px solid #c69;
+}
+
+.error, .success {
+	margin: 3px 0px;
+	padding: 2px;
+}
+}}}
 ==Configuration==
 
 To configure this plugin access "Newsletter" under the "Options" tab.
@@ -54,5 +89,9 @@ The following tags can be used in the template for the newsletter:
 || {AUTHOR} || The post author ||
 || {EXCERPT} || The post excerpt. If none is available, it will be generated based on the content. ||
 || {CONTENT} || The post content. ||
+
+
+
+
 
 
