--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -4,7 +4,7 @@
 
 After downloading this plugin, extract the directory "wp-ajax-newsletter".
 
-Go to the wordpress back-office and activate the plugin. This will create the needed tables in the database.
+Go to the Wordpress back-office and activate the plugin. This will create the needed tables in the database.
 
 To add the subscription form in your template, insert the following code where you want the form to appear:
 
@@ -44,7 +44,7 @@ You can use the following CSS classes to style the form in the front-office:
 }
 
 #newsletterLoading {
-	/* the loading message while the subscription is beeing handled */
+	/* the loading message while the subscription is being handled */
 }
 
 .success {
@@ -56,7 +56,7 @@ You can use the following CSS classes to style the form in the front-office:
 }
 }}}
 
-*For example* to get a similar result as show in the demonstration video, add the following code to your template CSS file:
+*For example*, to get a similar result as show in the demonstration video, add the following code to your template CSS file:
 {{{
 .newsletterTextInput{ width:120px; }
 
@@ -84,12 +84,11 @@ To configure this plugin access "Newsletter" under the "Options" tab.
 The following tags can be used in the template for the newsletter:
 || {TITLE} || The post title ||
 || {URL} || The post URL ||
-|| {DATE} || The date when the post was published (uses wordpress defined format) ||
-|| {TIME} || The time when the post was published (uses wordpress defined format) ||
+|| {DATE} || The date when the post was published (uses Wordpress defined format) ||
+|| {TIME} || The time when the post was published (uses Wordpress defined format) ||
 || {AUTHOR} || The post author ||
 || {EXCERPT} || The post excerpt. If none is available, it will be generated based on the content. ||
 || {CONTENT} || The post content. ||
-
 
 
 
