--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -6,6 +6,7 @@ After downloading this plugin, extract the directory "wp-ajax-newsletter".
 
 Go to the Wordpress back-office and activate the plugin. This will create the needed tables in the database.
 
+===Newsletter Subcription Form===
 To add the subscription form in your template, insert the following code where you want the form to appear:
 
 {{{
@@ -29,6 +30,7 @@ The `<!-- place your HTML code here -->` instruction is optional. You can use it
 }}}
 
 
+===Styling the Form===
 You can use the following CSS classes to style the form in the front-office:
 {{{
 #ajaxNewsletter, .newsletterContainer {
@@ -56,7 +58,7 @@ You can use the following CSS classes to style the form in the front-office:
 }
 }}}
 
-*For example*, to get a similar result as show in the demonstration video, add the following code to your template CSS file:
+*For example*, to get a similar result as shown in the demonstration video, add the following code to your template CSS file:
 {{{
 .newsletterTextInput{ width:120px; }
 
@@ -89,6 +91,9 @@ The following tags can be used in the template for the newsletter:
 || {AUTHOR} || The post author ||
 || {EXCERPT} || The post excerpt. If none is available, it will be generated based on the content. ||
 || {CONTENT} || The post content. ||
+
+
+
 
 
 
