--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,7 +1,13 @@
 #summary This page logs changes in the SVN repository.
 #labels Featured
 
-===March 20, 2007===
+
+===March 23rd, 2007===
+ * Fixed issue #5 - Newsletters set to "Manual" or "Every..." periodicity did not work.
+ * Improved messages.
+ * Improved email auto-fill for registered users.
+
+===March 20th, 2007===
  * Fixed issue #1 - Error creating table.
  * Added default periodicity for newsletter.
  * Changed Monthly and Weekly newsletters to send only the previous Week/Month.
@@ -9,5 +15,5 @@
  * Fixed bug when ' or " where used in the newsletter configuration fields (removed backslashes). 
  * Updated to RC2.
 
-===March 20, 2007===
+===March 20th, 2007===
  * Project created and added to the repository (v1.0 RC1)
