--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -1,6 +1,9 @@
 #summary Latest news about this project.
 #labels Featured
 
+==April 11th, 2007 - Version 1.0 released==
+The stable version 1.0 of the plugin is now available in the download section. It fixes some reported issues and adds some improvements. For more information please read the ChangeLog.
+
 ==March 20th, 2007 - Version 1.0 RC2 released==
 The second release candidate is now available in the download section. It fixes a reported issue and improvements were added. For more information please read the ChangeLog.
 
